samples/iptables-save-after.txt
# Generated by iptables-save v1.8.9 on Tue May 19 09:00:00 2026
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER-USER - [0:0]
:WEB - [0:0]
:RATELIMIT - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j RATELIMIT
-A INPUT -p tcp -m tcp --dport 80 -j WEB
-A INPUT -p tcp -m tcp --dport 443 -j WEB
-A INPUT -p icmp -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 8006 -m comment --comment "proxmox vpn" -j ACCEPT
-A INPUT -j LOG --log-prefix "DROP-INPUT: "
-A INPUT -j DROP
-A FORWARD -j DOCKER-USER
-A DOCKER-USER -j RETURN
-A WEB -m conntrack --ctstate NEW -j ACCEPT
-A RATELIMIT -m recent --update --seconds 60 --hitcount 4 --name SSH -j DROP
-A RATELIMIT -m recent --set --name SSH -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 8080 -m comment --comment "proxmox web ui" -j REDIRECT --to-ports 8006
-A POSTROUTING -s 172.17.0.0/16 -o eth0 -j MASQUERADE
COMMIT
